agregue un contenedor a las imagenes y propiedades de css para centrar las imagenes darle el borde, etc

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1 class="franklin-gothic-medium titulo-centrado color-amarillo tamaño-fuente">« Nuestros restaurantes »</h1>
-    
+  <div class="contenedor">
     <img class="img-1" src="/img/barcelona.webp" alt="">
     <img class="img-1" src="/img/buenos-aires.webp" alt="">
     <img class="img-1" src="/img/madrid.webp" alt="">
@@ -18,7 +18,7 @@
     <img class="img-1" src="/img/roma.webp" alt="">
     <img class="img-1" src="/img/rosario.webp" alt="">
     <img class="img-1" src="/img/tokio.webp" alt="">
-
+  </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
