Modifique las etiquetas del html para que queden bien

--- a/index.html
+++ b/index.html
@@ -7,61 +7,50 @@
   </head>
   <body>
     <h1
-      class="franklin-gothic-medium titulo-centrado color-amarillo tamaño-fuente"
-    >
+      class="franklin-gothic-medium titulo-centrado color-amarillo tamaño-fuente">
       « Nuestros restaurantes »
     </h1>
     <div class="contenedor">
       <img
         class="img-1"
-        src="/img/barcelona.webp"
-        alt="restaurante con mesas de madera en tono marron"
-      />
+        src="img/barcelona.webp"
+        alt="restaurante con mesas de madera en tono marron">
       <img
         class="img-1"
-        src="/img/buenos-aires.webp"
-        alt="restaurante con mesas con un mantel blanco y sillas negras con una cava de vinos contra la pared"
-      />
+        src="img/buenos-aires.webp"
+        alt="restaurante con mesas con un mantel blanco y sillas negras con una cava de vinos contra la pared">
       <img
         class="img-1"
-        src="/img/madrid.webp"
-        alt="restaurante con una mesa larga y paredes en color vino llena de cuadros chicos"
-      />
+        src="img/madrid.webp"
+        alt="restaurante con una mesa larga y paredes en color vino llena de cuadros chicos">
       <img
         class="img-1"
-        src="/img/miami.webp"
-        alt="restaurante con una mesa larga muy moderno"
-      />
+        src="img/miami.webp"
+        alt="restaurante con una mesa larga muy moderno">
       <img
         class="img-1"
-        src="/img/paris.webp"
-        alt="restaurante con mesas sin mantel  y sillas negras estilo parisino"
-      />
+        src="img/paris.webp"
+        alt="restaurante con mesas sin mantel  y sillas negras estilo parisino">
       <img
         class="img-1"
-        src="/img/pipa.webp"
-        alt="restaurante con mesas al aire libre estilo playero"
-      />
+        src="img/pipa.webp"
+        alt="restaurante con mesas al aire libre estilo playero">
       <img
         class="img-1"
-        src="/img/rio-de-janeiro.webp"
-        alt="restaurante con mesas sin mantel blanco y sillas negras ademas tiene unas amacas de mimbre colgadas del techo"
-      />
+        src="img/rio-de-janeiro.webp"
+        alt="restaurante con mesas sin mantel blanco y sillas negras ademas tiene unas amacas de mimbre colgadas del techo">
       <img
         class="img-1"
-        src="/img/roma.webp"
-        alt="restaurante con mesas sin  mantel  y sillas negras muy moderno"
-      />
+        src="img/roma.webp"
+        alt="restaurante con mesas sin  mantel  y sillas negras muy moderno">
       <img
         class="img-1"
-        src="/img/rosario.webp"
-        alt="restaurante con mesas con un mantel blanco y sillas color gris con muchos tonos de colores en el techo, muy moderno "
-      />
+        src="img/rosario.webp"
+        alt="restaurante con mesas con un mantel blanco y sillas color gris con muchos tonos de colores en el techo, muy moderno ">
       <img
         class="img-1"
-        src="/img/tokio.webp"
-        alt="restaurante con mesas sin mantel blanco y sillas color crema muy tradicional japones"
-      />
+        src="img/tokio.webp"
+        alt="restaurante con mesas sin mantel blanco y sillas color crema muy tradicional japones">
     </div>
     <script type="module" src="/main.js"></script>
   </body>
